# ncnn_mobileclip

./: .gitignore  README.md  export.py  test.py
mobileclip/models/: mci.py
mobileclip/modules/common/: mobileone.py  transformer.py
mobileclip2_ncnn/: export_mobileclip2.py
mobileclip2_ncnn/infer/: CMakeLists.txt  MobileClip2.cpp  MobileClip2.h  main.cpp
mobileclip2_ncnn/model_configs/: MobileCLIP2-S0.json  MobileCLIP2-S2.json
ncnn_mobileclip_infer/: CMakeLists.txt  MobileClip.cpp  MobileClip.h  SimpleTokenizer.cpp  SimpleTokenizer.h  main.cpp  vocab.txt
